All HTML pages passed the validator

--- a/cart_page.html
+++ b/cart_page.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Cart Page</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -31,6 +31,7 @@
     </header>
 
     <section class="element-main element-secondary cart-page">
+      <h2> Your Cart </h2>
       <div class="grid element-grid">
         <div class="checkout-header">
           <table>
@@ -52,11 +53,7 @@
 
         <div class="checkout-cart cart">
           <div class="cart-info cart-info-grid">
-            <img
-              class="img"
-              src="img/essential-drip-lip-oil.png"
-              alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"
-            />
+            <img class="img" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss">
             <div class="cart-product-name">
               <p class="mini-product-name">Essential Drip Lip Oil</p>
               <p class="mini-product-shade">Shade: Lavender Kiss</p>
@@ -66,15 +63,11 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" min="1"/>
+          <input class="quantity-box" type="number" value="1" min="1">
           <p class="total-price">$17.00</p>
 
           <div class="cart-info cart-info-grid">
-            <img
-              class="img"
-              src="img/highlight-topper.png"
-              alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"
-            />
+            <img class="img" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune">
             <div class="cart-product-name">
               <p class="mini-product-name">Highlighter Topper</p>
               <p class="mini-product-shade">Shade: Miss Neptune</p>
@@ -84,15 +77,11 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" min="1"/>
+          <input class="quantity-box" type="number" value="1" min="1">
           <p class="total-price">$17.00</p>
 
           <div class="cart-info cart-info-grid">
-            <img
-              class="img"
-              src="img/lustrous-liquid-eyeshadow.png"
-              alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"
-            />
+            <img class="img" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat">
             <div class="cart-product-name">
               <p class="mini-product-name">Lustrous Liquid Eyeshadow</p>
               <p class="mini-product-shade">Shade: Lab Coat</p>
@@ -102,7 +91,7 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" min="1"/>
+          <input class="quantity-box" type="number" value="1" min="1">
           <p class="total-price">$17.00</p>
         </div>
 
