--- a/contact_page.html
+++ b/contact_page.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Contact Us</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -36,33 +36,33 @@
         <h2> Customer Support </h2>
         <h4> Customer Service Hours </h4>
       <div class="service-hours">
-        <p id="hours"> Mon - Fri: </p>       
+        <p id="weekdayHours"> Mon - Fri: </p>       
         <p > 10am - 9pm </p>
       </div>
 
       <div class="service-hours">
-        <p id="hours"> Saturday: </p>         
+        <p id="saturdayHours"> Saturday: </p>         
         <p> 9am - 7pm </p>
       </div>
 
       <div class="service-hours">
-        <p id="hours"> Sunday:  </p>           
+        <p id="sundayHours"> Sunday:  </p>           
         <p>10am - 6pm</p>
       </div>
 
       <h4> Talk to Us! </h4>
       <div class="contact-information">
-        <img src="img/phone-icon.png" alt="Phone Number Icon" />
+        <img src="img/phone-icon.png" alt="Phone Number Icon">
         <p> 1 (778) 112-6272</p>
       </div>
 
       <div class="contact-information">
-        <img src="img/email-icon.png" alt="Email Icon" />           
+        <img src="img/email-icon.png" alt="Email Icon">           
         <p>nebulacosmetics@mail.com</p>
       </div>
 
       <div class="contact-information">
-        <img src="img/instagram-icon.png" alt="Instagram Icon" />
+        <img src="img/instagram-icon.png" alt="Instagram Icon">
         <p>nebula.cosmetics</p>
       </div>
       </div>
@@ -92,14 +92,12 @@
       </div>
 
        <div class="input-container">
-        <label class=form-label for="problemExplained">Please Tell Us How We Can Help</label>
+        <label class=form-label for="problem">Please Tell Us How We Can Help</label>
           <textarea id="problem" name="problem">Please Include all Necessary Information</textarea>
       </div>
 
       <a class="btn-primary support-button" href="#">Send Message</a>
     </div>
-
-  </section>
 
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
