--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Nebula Style Guide</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
-    <link href="css/grid.css" rel="stylesheet" type="text/css" />
-    <link href="css/token.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,11 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img
-            src="svg/NEBULA.svg"
-            alt="Logo of Nebula Makeup Brand"
-            class="logo"
-          />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -39,8 +35,7 @@
         <img
           class="banner-img"
           src="img/ari-title-banner.png"
-          alt="Adriana Venti Wearing a Space Helmet in Nebula Cosmetics"
-        />
+          alt="Adriana Venti Wearing a Space Helmet in Nebula Cosmetics">
       </figure>
       <div class="banner-container">
         <h2 class="banner-title">Hypernova Satin Glitter Highlighter</h2>
@@ -53,7 +48,7 @@
     </section>
 
     <section class="element-main">
-      <section class="greeting-section">
+      <div class="greeting-section">
         <h2 class="greeting-title">Beauty With a Purpose</h2>
         <p class="greeting-content">
           We are dedicated to selecting makeup ingredients that not only benefit
@@ -62,24 +57,12 @@
           sustainability.
         </p>
         <div class="greeting-img-container">
-          <img
-            src="img/vegan-icon.png"
-            alt="A an icon showing the letter V with text vegan below"
-          />
-          <img
-            src="img/cruelty-free-icon.png"
-            alt="A an icon showing a bunny and a heart with text cruelty-free below"
-          />
-          <img
-            src="img/paraben-free-icon.png"
-            alt="A an icon showing a crossed hazardous chemical with text paraben-free below"
-          />
-          <img
-            src="img/recyclable-icon.png"
-            alt="A an icon showing circular economy arrows forming a heart with text recyclable below"
-          />
+          <img src="img/vegan-icon.png" alt="A an icon showing the letter V with text vegan below">
+          <img src="img/cruelty-free-icon.png" alt="A an icon showing a bunny and a heart with text cruelty-free below">
+          <img src="img/paraben-free-icon.png" alt="A an icon showing a crossed hazardous chemical with text paraben-free below">
+          <img src="img/recyclable-icon.png" alt="A an icon showing circular economy arrows forming a heart with text recyclable below">
         </div>
-      </section>
+      </div>
     </section>
 
     <section class="bestseller-section">
@@ -88,11 +71,7 @@
           <div class="product-container">
             <div class="image-container img-crop">
               <a href="#">
-                <img
-                  class="img img-product"
-                  src="img/essential-drip-lip-oil.png"
-                  alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"
-                />
+                <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss">
               </a>
             </div>
             <h5 class="product-color">Lavender Kiss</h5>
@@ -101,31 +80,17 @@
               <div class="product-shade-container">
                 <div class="product-shade-crop">
                   <img
-                    class="product-shade-display"
-                    src="img/essential-drip-lip-oil-color1.png"
-                    alt="Essential Drip Lip Oil Shade Options in Purple"
-                  />
+                    class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
                 </div>
                 <div class="product-shade-crop">
                   <img
-                    class="product-shade-display"
-                    src="img/essential-drip-lip-oil-color2.png"
-                    alt="Essential Drip Lip Oil Shade Options in Pink"
-                  />
+                    class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
                 </div>
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/essential-drip-lip-oil-color3.png"
-                    alt="Essential Drip Lip Oil Shade Options in Green"
-                  />
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
                 </div>
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/essential-drip-lip-oil-color4.png"
-                    alt="Essential Drip Lip Oil Shade Options in Dark Brown"
-                  />
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
                 </div>
               </div>
             </div>
@@ -139,11 +104,7 @@
           <div class="product-container">
             <div class="image-container img-crop">
               <a href="#">
-                <img
-                  class="img img-product"
-                  src="img/highlight-topper.png"
-                  alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"
-                />
+                <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune">
               </a>
             </div>
             <h5 class="product-color">Miss Neptune</h5>
@@ -151,36 +112,22 @@
               <h4 class="product-name">Highlighter Topper</h4>
               <div class="product-shade-container">
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/highlight-topper-color1.png"
-                    alt="Highlight Topper Shade Options in Purple"
-                  />
+                  <img class="product-shade-display" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
                 </div>
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/highlight-topper-color2.png"
-                    alt="Highlight Topper Shade Options in Green"
-                  />
+                  <img class="product-shade-display" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
                 </div>
               </div>
             </div>
           </div>
-          <a class="btn-secondary product-button" href="cart_page.html"
-            >Add to Cart $17</a
-          >
+          <a class="btn-secondary product-button" href="cart_page.html"> Add to Cart $17 </a>
         </div>
 
         <div class="product-listing-container">
           <div class="product-container">
             <div class="image-container img-crop">
               <a href="product_page.html">
-                <img
-                  class="img img-product"
-                  src="img/lustrous-liquid-eyeshadow.png"
-                  alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"
-                />
+                <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat">
               </a>
             </div>
             <h5 class="product-color">Lab Coat</h5>
@@ -188,43 +135,25 @@
               <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
               <div class="product-shade-container">
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/lustrous-liquid-eyeshadow-color1.png"
-                    alt="Lustrous Liquid Eyeshadow Shade Options in White"
-                  />
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
                 </div>
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/lustrous-liquid-eyeshadow-color2.png"
-                    alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown"
-                  />
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
                 </div>
                 <div class="product-shade-crop">
-                  <img
-                    class="product-shade-display"
-                    src="img/lustrous-liquid-eyeshadow-color3.png"
-                    alt="Lustrous Liquid Eyeshadow Shade Options in Purple"
-                  />
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
                 </div>
               </div>
             </div>
           </div>
-          <a class="btn-secondary product-button" href="cart_page.html"
-            >Add to Cart $17</a
-          >
+          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17 </a>
         </div>
       </div>
     </section>
 
     <section class="event-section">
       <figure>
-        <img
-          class="event-img"
-          src="img/events-pop-up-store.png"
-          alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background"
-        />
+        <img class="event-img" src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
       </figure>
       <div class="event-container">
         <h2 class="event-title">Join our event for 30% off on all items</h2>
@@ -239,11 +168,7 @@
 
     <section class="about-section">
       <figure>
-        <img
-          class="about-img"
-          src="img/ari-photoshoot.png"
-          alt="Adriana Venti in Nebula Cosmetics"
-        />
+        <img class="about-img" src="img/ari-photoshoot.png" alt="Adriana Venti in Nebula Cosmetics">
       </figure>
       <div class="about-container">
         <h2 class="about-title">Our Dream</h2>
