--- a/product_page.html
+++ b/product_page.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Product Page</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css">
+    <link href="css/token.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo">
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -53,7 +53,7 @@
           </div>
         <p> Shade: Lab Coat </p>
         <div class="item-add">
-          <input class="quantity-box" type="number" value="1" min="1"/>
+          <input class="quantity-box" type="number" value="1" min="1">
           <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
         </div>
 
@@ -67,7 +67,7 @@
     </div>
 
   <section class="product-review-section">
-     <div class="overall-review">
+    <div class="overall-review">
       <h3> Customer Reviews </h3>
       <h2> 4.8 </h2>
       <img src="img/reviews-4.8-stars.png" alt="4.8 stars review">
@@ -90,7 +90,7 @@
       <h5> Solange Gomez </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
       <p> Love the color on me! A must have for me, it pairs really well with the Lip Drip Oil</p>
-    <div>
+    </div>
   </section>
 
     <div class="related-items">
