Additional Product Page, Events Content Added

--- a/events_page.html
+++ b/events_page.html
@@ -47,15 +47,15 @@
         <h2 class="join-us-text">Why You Should Join the Event</h2>
         <div class="join-us-img-container">
           <div class="join-us-reasoning">
-            <img src="img/placeholder.png" alt = "An icon representing the 30% discount that will be offered at the ">
+            <img src="img/discount-icon.png" alt = "An icon representing the 30% discount that will be offered at the ">
             <p> An exclusive 30% discount on all items during your visit. </p>
           </div>
           <div class="join-us-reasoning">
-            <img src="img/placeholder.png" alt = "An icon of a ticket represetnting a raffle that will be done">
+            <img src="img/raffle-icon.png" alt = "An icon of a ticket represetnting a raffle that will be done">
             <p> A raffle for a chance to win our Milky Way collection. </p>
           </div>
           <div class="join-us-reasoning">
-            <img src="img/placeholder.png" alt = "An icon representing a surprise celebrity visit">
+            <img src="img/celebrity-icon.png" alt = "An icon representing a surprise celebrity visit">
             <p> Special celebrity guest appearance  </p>
           </div>
         </div>
