--- a/product_page_lip.html
+++ b/product_page_lip.html
@@ -34,24 +34,27 @@
 
     <div class="product-information">
       <div class="product-image">
-        <a href="product_page.html"> <img src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+        <a href="product_page_lip.html"> <img src="img/essential-drip-lip-oil.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
       </div>
 
       <div class="product-details">
-        <h5>Midnight Shadow</h5>
-        <h3>Lustrous Liquid Eyeshadow</h3>
+        <h5>Moonlight Sunrise</h5>
+        <h3>Essential Drip Lip Oil</h3>
           <div class="product-shade-container">
             <div class="product-shade-crop">
-              <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
             </div>
             <div class="product-shade-crop">
-              <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink">
             </div>
             <div class="product-shade-crop">
-              <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Green">
+            </div>
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Lustrous Liquid Eyeshadow Shade Options in Red">
             </div>
           </div>
-        <p> Shade: Lab Coat </p>
+        <p> Shade: Lavander Kiss </p>
         <div class="item-add">
           <input class="quantity-box" type="number" value="1" min="1"/>
           <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
@@ -59,10 +62,10 @@
 
         <hr>
           <h4>Product Description </h4>
-          <p> Go from subtle to standout in seconds with one-stroke color payoff that won’t crease or wear off. our stunning range of universally flattering shades weightlessly wash over lids before drying down to a lustrous, crease-resistant finish. the fluffy, tapered teardrop applicator deposits long-wearing liquid pigments allover and doubles as eyeliner. high-impact color has never been easier. </p>
+          <p> Swipe on sheer color, a tantalizing scent & mega glossy shine in no time. our coconut oil-infused bestseller combines the texture of a gloss with the moisturizing benefits of an oil. the cooling metal tip loads up the perfect amount of product—bathing lips in nourishing botanicals and silky-smooth hydration without the stickiness. </p>
         <hr>
           <h4> Ingredients</h4>
-          <p> Isododecane, calcium aluminum borosilicate, trimethylsiloxysilicate, silica, ribehenate/isostearate/eicosandioate, calcium sodium borosilicate, octyldodecanol, hydrogenated styrene/isoprene copolymer, disteardimonium hectorite, alcohol denat., caprylic/capric triglyceride, polyhydroxystearic acid, polyisoprene, tin oxide, isostearic acid, pentaerythrityl tetra-di-t-butyl hydroxyhydrocinnamate, lecithin, polyglyceryl-3 polyricinoleate, water/aqua/eau, talc, calcium titanium borosilicate, synthetic fluorphlogopite, bht, titanium dioxide (ci 77891), iron oxides (ci 77491/ ci 77492/ ci 77499). </p>
+          <p> Cocoglycerides, ethylcellulose, caprylic/capric triglyceride, propyl gallate, withania somnifera root extract, flavor (aroma), red 28 lake (ci 45410). </p>
       </div>
     </div>
 
@@ -75,21 +78,21 @@
     </div>
 
     <div class="product-review">
-      <h5> Britney S. Pears </h5>
+      <h5> Meredith Jackie </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
-      <p> Great Product! I really enjoyed how it looks on me :) </p>
+      <p> Honestly really cheap in comparisson to other lip oils out there. Would reccomend! </p>
     </div>
 
     <div class="product-review">
-      <h5> Cartier Bae </h5>
+      <h5> Camille Hudson </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
-      <p> Product applied really well onto skin. Would purchase again in a different shade </p>
+      <p> LOVE! it has the perfect shade and it leaves my lips glossy AND moisturized </p>
     </div>
 
     <div class="product-review">
-      <h5> Solange Gomez </h5>
+      <h5> Jolene Widjaja </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
-      <p> Love the color on me! A must have for me, it pairs really well with the Lip Drip Oil</p>
+      <p> This is amazing! Zero stickiness, long-lasting, and nourishing. Works perfectly to moisturize a bare lips!</p>
     <div>
   </section>
 
@@ -97,8 +100,8 @@
     <h3> Related Items </h3>
     <div class="product-reccomendations">
     <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
-      <h5> Lavander Kiss </h5>
+      <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+      <h5> Midnight Shadow </h5>
       <h4> Essential Drip Lip Oil </h4>
     </div>
 
