--- a/shop_page.html
+++ b/shop_page.html
@@ -38,7 +38,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-              <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
+              <a href="product_page_lip.html"> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
               </div>
               <h5 class="product-color">Lavender Kiss</h5>
               <div>
@@ -86,7 +86,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container img-crop">
-                <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+                <a href="product_page_eyeshadow.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
               </div>
               <h5 class="product-color">Lab Coat</h5>
               <div>
