Fixed all Errors on Home Page

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           This is makeup made to feel good in, without hiding what makes you
           unique. And it’s all vegan and cruelty free.
         </p>
-        <a class="btn btn-default" href="about_page.html">Our Story</a>
+        <a class="btn btn-primary" href="about_page.html">Our Story</a>
       </div>
     </section>
 
