Changed Reset Button Style on Checkout Page

--- a/checkout_page.html
+++ b/checkout_page.html
@@ -94,7 +94,7 @@
   
                   <div class="btn-container">
                     <input class="btn btn-secondary" type="submit">
-                    <input class="btn btn-primary" type="reset">
+                    <input class="btn btn-default" type="reset">
                   </div>
                 </section>
   
