Fixed Nested Headings On 4 Pages
- cart
- checkout
- home
- shop

--- a/cart_page.html
+++ b/cart_page.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="element-main element-secondary cart-page">
-      <h2> Your Cart </h2>
+      <h1 class="shop-title"> Your Cart </h1>
       <div class="grid element-grid">
         <div class="checkout-header">
           <table>
