--- a/checkout_page.html
+++ b/checkout_page.html
@@ -34,7 +34,7 @@
 
         <section class="payment-method element-main">
             <div>
-                <h2 class="cart-title">Payment Method</h2>
+                <h1 class="cart-title main-title">Payment Method</h1>
             </div>
             <form action=# method="post">
                 <section class="payment-form-section">
@@ -101,36 +101,38 @@
               </form>
         </section>
 
-        <section class="element-secondary element-main">
-            <div>
-                <h2 class="cart-title">Order Summary</h2>
-            </div>
-            <div class="order-list">
-                <div class="order-container">
-                    <div class = "cart-info">
-                        <img class="img-checkout" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss">
-                        <div class="cart-product-name">
-                            <p class="checkout-product-name">Essential Drip Lip Oil</p>
-                            <p class="checkout-product-shade">Lavender Kiss</p>
-                            <small class="checkout-qty">QTY: 1</small>
+        <section class="element-secondary">
+            <section class="element-main">
+                <div>
+                    <h2 class="cart-title">Order Summary</h2>
+                </div>
+                <div class="order-list">
+                    <div class="order-container">
+                        <div class = "cart-info">
+                            <img class="img-checkout" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss">
+                            <div class="cart-product-name">
+                                <p class="checkout-product-name">Essential Drip Lip Oil</p>
+                                <p class="checkout-product-shade">Lavender Kiss</p>
+                                <small class="checkout-qty">QTY: 1</small>
+                            </div>
                         </div>
+                        <p class="total-price checkout-price">$17.00</p>
                     </div>
-                    <p class="total-price checkout-price">$17.00</p>
                 </div>
-            </div>
 
-            <div class="total-container">
-                <div class="total-list">
-                    <p class="cart-price checkout-price">Subtotal</p>
-                    <p class="cart-price checkout-price">Tax</p>
-                    <p class="cart-price final-price">Total</p>
+                <div class="total-container">
+                    <div class="total-list">
+                        <p class="cart-price checkout-price">Subtotal</p>
+                        <p class="cart-price checkout-price">Tax</p>
+                        <p class="cart-price final-price">Total</p>
+                    </div>
+                    <div class="total-list">
+                        <p class="total-price checkout-price">$17.00</p>                
+                        <p class="total-price checkout-price">$1.52</p>
+                        <p class="total-price final-price">$18.52</p>
+                    </div>
                 </div>
-                <div class="total-list">
-                    <p class="total-price checkout-price">$17.00</p>                
-                    <p class="total-price checkout-price">$1.52</p>
-                    <p class="total-price final-price">$18.52</p>
-                </div>
-            </div>
+            </section>
         </section>
     </section>
 
