--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -932,26 +932,44 @@
             <div>
               <h4> Fonts </h4>
                 <ul> 
-                  <li>GT Super Ds [Font]. Retrieved from <a class="in-text-link" href="https://www.grillitype.com/typeface/gt-super">https://www.grillitype.com/typeface/gt-super.</a><br></li>
-                  <li>Suisse Int'l [Font]. Retrieved from <a class="in-text-link" href="https://www.swisstypefaces.com/fonts/suisse/">https://www.swisstypefaces.com/fonts/suisse/</a><br></li>
+                  <li>GT Super Ds [Font]. Retrieved from <a class="in-text-link" href="https://www.grillitype.com/typeface/gt-super">https://www.grillitype.com/typeface/gt-super.</a></li>
+                  <li>Suisse Int'l [Font]. Retrieved from <a class="in-text-link" href="https://www.swisstypefaces.com/fonts/suisse/">https://www.swisstypefaces.com/fonts/suisse/</a></li>
                 </ul>
               <h4> Images </h4>
               <ul>
                 <li>Blush & Lipstick [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
-                <li>Beauty Brunch Events [Image]. 2023. The Burrard. Retrieved from <a class="in-text-link" href=" https://theburrard.com/top-five-vancouver-brunch-spots//"> https://theburrard.com/top-five-vancouver-brunch-spots/</a><br></li>
-                <li>Essential Drip Lip Oil [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Glam Night Event [Image]. 2022. iStock. Retrieved from <a class="in-text-link" href="https://www.istockphoto.com/videos/parties/"> https://www.istockphoto.com/videos/parties</a><br></li>
-                <li>Highlighter Topper [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Landing Page Icons [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/pages/about">https://rembeauty.com/pages/about</a><br></li>
-                <li>Lustrous Liquid Eyeshadow [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Matte Lipstick [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Satin Matte Blush [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a><br></li>
-                <li>Stellar Workshop Event [Image]. 2023. Jack Morton. Retrieved from <a class="in-text-link" href="https://jackmorton.com/work/instagram-x-ariana-grande-x-r-e-m-beauty-experience/"> https://jackmorton.com/work/instagram-x-ariana-grande-x-r-e-m-beauty-experience/</a><br></li>
+                <li>Beauty Brunch Events [Image]. 2023. The Burrard. Retrieved from <a class="in-text-link" href=" https://theburrard.com/top-five-vancouver-brunch-spots//"> https://theburrard.com/top-five-vancouver-brunch-spots/</a></li>
+                <li>Essential Drip Lip Oil [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Glam Night Event [Image]. 2022. iStock. Retrieved from <a class="in-text-link" href="https://www.istockphoto.com/videos/parties/"> https://www.istockphoto.com/videos/parties</a></li>
+                <li>Highlighter Topper [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Landing Page Icons [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/pages/about">https://rembeauty.com/pages/about</a></li>
+                <li>Lustrous Liquid Eyeshadow [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Matte Lipstick [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Satin Matte Blush [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Stellar Workshop Event [Image]. 2023. Jack Morton. Retrieved from <a class="in-text-link" href="https://jackmorton.com/work/instagram-x-ariana-grande-x-r-e-m-beauty-experience/"> https://jackmorton.com/work/instagram-x-ariana-grande-x-r-e-m-beauty-experience/</a></li>
+                <li>Cruelty Free [Icon]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Vegan [Icon]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Recyclable [Icon]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Paraben Free [Icon]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Essential Drip Lip Oil Shade Lavender [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Essential Drip Lip Oil Shade Peach [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Essential Drip Lip Oil Shade Teal [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Essential Drip Lip Oil Shade Nude [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Highlighter Topper Shade Lavender [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Highlighter Topper Shade Mint [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Kohl Eyeliner Pencil Shade White [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Lip Stain Marker Shade Magenta [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Lustrous Liquid Eyeshadow Shade White [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Lustrous Liquid Eyeshadow Shade Nude [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Lustrous Liquid Eyeshadow Shade Purple [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Matte Lipstick Shade Nude [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Plumping Lip Gloss Shade White [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
+                <li>Satin Matte Blush Shade Pink [Image]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/">https://rembeauty.com/</a></li>
               </ul>
               <h4> Content Writing </h4>
               <ul>
-                <li>Essential Drip Lip Oil Description and Ingredients [Content]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/products/essential-drip-lip-oil">https://rembeauty.com/products/essential-drip-lip-oil</a><br></li>
-                <li>Liquid Eyeshadow Description and Ingredients [Content]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/products/midnight-shadows-liquid-eyeshadow-lustrous?variant=42620758851847">https://rembeauty.com/products/midnight-shadows-liquid-eyeshadow-lustrous?variant=42620758851847</a><br></li>
+                <li>Essential Drip Lip Oil Description and Ingredients [Content]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/products/essential-drip-lip-oil">https://rembeauty.com/products/essential-drip-lip-oil</a></li>
+                <li>Liquid Eyeshadow Description and Ingredients [Content]. 2024. Rem Beauty. Retrieved from <a class="in-text-link" href="https://rembeauty.com/products/midnight-shadows-liquid-eyeshadow-lustrous?variant=42620758851847">https://rembeauty.com/products/midnight-shadows-liquid-eyeshadow-lustrous?variant=42620758851847</a></li>
               </ul>
             </div>
   
